src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__class_field_default.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
import "package:equatable/equatable.dart";

final class Foo with EquatableMixin {
  final String x;
  final int y;

  const Foo({this.x = "hello", this.y = 123 + 234});

  @override
  List<Object?> get props => [x, y];

  FooBuilder toBuilder() => FooBuilder(x: x, y: y);

  Map<String, dynamic> toJson() => {"x": x, "y": y};
  factory Foo.fromJson(Map<String, dynamic> json) =>
      Foo(x: json["x"] as String, y: json["y"] as int);
}

/// Builder class for [Foo]
final class FooBuilder {
  String x;
  int y;

  FooBuilder({required this.x, required this.y});

  Foo build() => Foo(x: x, y: y);
}
