src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__default_sealed_unions.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
sealed class Foo {
  const Foo();

  FooBuilder toBuilder();

  Map<String, dynamic> toJson();
  factory Foo.fromJson(Map<String, dynamic> json) => switch (json["type"]) {
    "X" => X.fromJson(json),
    "Y" => Y.fromJson(json),
    final other => throw ArgumentError("unknown discriminant: $other"),
  };
}

sealed class FooBuilder {
  Foo build();
}

final class X extends Foo {
  const X() : super();

  XBuilder toBuilder() => XBuilder();

  @override
  Map<String, dynamic> toJson() => {"type": "X"};
  factory X.fromJson(Map<String, dynamic> json) => X();

  @override
  String toString() =>
      "X("
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! X) {
      return false;
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([]);
}

/// Builder class for [X]
final class XBuilder extends FooBuilder {
  XBuilder() : super();

  X build() => X();
}

final class Y extends Foo {
  const Y() : super();

  YBuilder toBuilder() => YBuilder();

  @override
  Map<String, dynamic> toJson() => {"type": "Y"};
  factory Y.fromJson(Map<String, dynamic> json) => Y();

  @override
  String toString() =>
      "Y("
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! Y) {
      return false;
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([]);
}

/// Builder class for [Y]
final class YBuilder extends FooBuilder {
  YBuilder() : super();

  Y build() => Y();
}
